--- a/PDTIC-2018-2020/PDTIC_2018_2020.md
+++ b/PDTIC-2018-2020/PDTIC_2018_2020.md
@@ -15,11 +15,11 @@ Claudia Maria Mendes de Almeida Pedrozo
 Lucineide Alves de Oliveira Medeiros da Costa  
 **Subsecretária de Gestão Estratégica**
 
-Sérgio Thiago Moreira  
+Thiago Moreira dos Santos
 **Subsecretário de Planejamento, Orçamento e Administração**
 
 Paulo Henrique de Carvalho Moreira   
-**Coordenador-Geral de Infraestrutura Tecnológica**
+**Coordenador-Geral de Tecnologia da Informação e Comunicação**
 
 **Comitê de Governança Digital - CGD:**  
 Chefe de Gabinete do Ministro:  
@@ -101,7 +101,7 @@ O Ministério conta com suas 6 secretarias finalísticas e duas subsecretarias l
 - **MinC** Ministério da Cultura
 - **SGE** - Subsecretaria de Gestão Estratégica
 - **CGD** Comitê de Governança Digital
-- **CGTIC** Coordenação-Geral de Infraestrutura Tecnológica
+- **CGTIC** Coordenação-Geral de Tecnologia da Informação e Comunicação
 - **CGOTI** Coordenação de Governança de Tecnologia da Informação e Comunicação
 - **COINT** Coordenação de Infraestrutura Tecnológica
 - **COSIS** Coordenação de Sistemas de Informação
