--- a/PDTIC-2018-2020/PDTIC_2018_2020.md
+++ b/PDTIC-2018-2020/PDTIC_2018_2020.md
@@ -30,7 +30,7 @@ Magali  Moura - Titular
 
 Secretário do Audiovisual:  
 Frederico Maia Mascarenhas - Titular  
-eber Moura Trigueiro - Suplente  
+Heber Moura Trigueiro - Suplente  
 
 Secretário da Economia Criativa:  
 Douglas Ramiro Capelo - Titular  
@@ -38,7 +38,7 @@ José Mauro Gana Fini - Suplente
 
 Secretário de Fomento e Incentivo à Cultura:  
 José Paulo Soares Martins - Titular  
-decir Luiz Prata da Costa - Suplente  
+Odecir Luiz Prata da Costa - Suplente  
 
 Secretário de Difusão e Infraestrutura Cultural:  
 Paulo Nakamura - Suplente  
