--- a/PDTIC-2018-2020/PDTIC_2018_2020.md
+++ b/PDTIC-2018-2020/PDTIC_2018_2020.md
@@ -679,7 +679,21 @@ São necessidades por informações que sejam  essenciais para executação dos 
 
 Para identificar quais são as necessidades mais impactantes para o órgão, com o objetivo e dirigir os esforços e recursos de TI para a realização dessas prioritariamente, foi aplicado o método de priorização abaixo:
 
---tabela--
+
+| Valor            | Descrição |                                                                             |  
+|------------------|-----------|-----------------------------------------------------------------------------| 
+| Impacto (I)      | 3         | Paralização do processo de negócio sem contingência                         | 
+|                  | 2         | Melhoria substancial ou paralização no processo de negócio com contingência | 
+|                  | 0         | Melhoria acessória no processo de negócio                                   | 
+| Urgência (U)     | 3         | Prazo legal                                                                 | 
+|                  | 2         | Compromisso externo                                                         | 
+|                  | 0         | Compromisso interno                                                         | 
+| Abrangência (A)  | 3         | Nacional                                                                    | 
+|                  | 2         | Regional                                                                    | 
+|                  | 1         | Estadual                                                                    | 
+| Soliticações (S) | n         | Quantidade de áreas que diretamente demandaram o projeto                    | 
+
+Considerando os critérios acima, a soma dos valores para cada necessidade será a priorização, do maior para o menor.
 
 ## 7.3  Sobre a Priorização das Necessidades e Projetização
 
