--- a/PDTIC-2018-2020/PDTIC_2018_2020.md
+++ b/PDTIC-2018-2020/PDTIC_2018_2020.md
@@ -1035,6 +1035,33 @@ Os recursos a serem investidos na capacitação dos servidores da CGTIC podem se
 
 # 10  PLANO ORÇAMENTÁRIO DO PDTI
 
+O orçamento planejado para a CGTIC buscou a alocação de recursos com a produção de benefícios para o MinC. Nessa visão, este orçamento é o produto do processo de planejamento e instrumento de controle, tendo em vista a execução daquilo que se planejou.
+
+Com base nos valores estimados na previsão orçamentária de cada ação, consolidaram-se os dados para apurar uma proposta orçamentária. Cabe lembrar que as estimativas orçamentárias são classificadas nas seguintes categorias econômicas:
+
+- **Custeio**: é a dotação necessária à manutenção de serviços e à manutenção da ação da administração como, por exemplo, o pagamento de pessoal, de material de consumo e a contratação de serviços de terceiros.
+- **Capital** (investimento): é a dotação orçamentária para o planejamento e a execução de obras, aquisição de instalações, equipamentos e material permanente.
+
+Os valores monetários considerados na orçamentação deste plano diretor baseiam-se em estimativas de mercado e referências de contratações anteriores. Toda contratação de TIC será precedida de minucioso planejamento, realizado em estrita observação às normas legais aplicáveis.
+
+--tabela--
+
+Nesta Proposta Orçamentária não há previsão para realização de adequações ou restrições na composição orçamentária deste PDTIC. 
+
+
+## 10.1 Planos Internos
+
+Os Planos Internos utilizados para controle de saldo de valores são instrumentos úteis ao planejamento da execução financeira desta CGTIC. O alinhamento das ações com seu respectivo PI traz um melhor controle sobre a execução financeira. 
+
+Além disto, o programa de Pactuação de Desempenho prevê que todos os recursos orçamentários sejam detalhados na forma de PIs. Este programa é descrito na Portaria nº 149, de 21 de novembro de 2012 que institui o Programa de Pactuação de Desempenho no âmbito do Ministério da Cultura. Uma das diretrizes deste programa é, conforme Art. 2º item II da referida portaria, a adoção de procedimentos, métodos e modelos uniformes para todas as unidades, respeitadas as suas especificidades.
+
+Abaixo, é apresentada uma tabela mostrando um consolidado de Planos Internos.
+
+--tabela
+
+Cabe lembrar que este consolidado de PIs é baseado na Previsão Orçamentária, e, portanto, deve sofrer alterações ao longo da vigência deste PDTI. Também é utilizado uma abreviação para representar o PI pois o código identificador do mesmo pode ser alterado a cada ano.
+
+
 # 11  PLANO DE GESTÃO DE RISCOS
 
 O plano de gestão de riscos identifica os principais riscos que podem resultar na inexecução total ou parcial deste Plano Diretor de TIC, impactando no alcance das metas e na realização das ações previstas. Para cada risco identificado é avaliada sua probabilidade de ocorrência e seu impacto. Da mesma forma é indicado o plano de mitigação para reduzir o risco e/ou a probabilidade de sua ocorrência e/ou o plano de contingência com as ações a serem tomadas caso o risco se concretize. A seguir, são apresentados os riscos:
@@ -1093,9 +1120,7 @@ Por fim, espera-se com esse planejamento oferecer para os usuários do Ministér
 
 # 15  ANEXOS
 
-## 15.1 Catálogo de Infraestrutura Tecnológica
-
-## 15.3 Catálogo de Sistemas
+## 15.1 Catálogo de Sistemas
 
 #### Sistemas dos Serviços Digitais Internos ao MinC
 
