--- a/PDTIC-2018-2020/PDTIC_2018_2020.md
+++ b/PDTIC-2018-2020/PDTIC_2018_2020.md
@@ -532,6 +532,7 @@ Além de apontar a evolução da TIC em relação às ações previstas no PDTIC
 
 Analisando os dados referentes às justificativas da não realização dos projetos, infere-se que se houvesse um maior número de recursos humanos teríamos uma maior execução dos projetos previstos. Outro ponto relevante seria uma maior disponibilidade de tempo do Comitê de Governança de Digital para se reunir com a finalidade de aprovar as alterações de priorização. 
 
+
 # 7  INVENTÁRIO DE NECESSIDADES
 
 O inventário de necessidades de TIC foi elaborado com base nas demandas apresentadas pelas áreas do Ministério, com apoio e suporte da equipe de revisão do PDTIC. O inventário é dividido em 4 tipos de necessidades: Necessidade de Serviços de TIC, Necessidade de Infraestrutura de TIC, Necessidade de Contratação de TIC, Necessidade de Informação.   
@@ -1015,16 +1016,16 @@ Quando for o caso, a CGTIC viabilizará capacitações “In Company”, a fim d
 | Gestão de Segurança da Informação, ISO/IEC 27.002 Foundation                                 | 3                                             | 
 | Gestão de Riscos, com foco na norma NBR ISO/IEC 31.000                                       | 3                                             | 
 | Monitoramento, Avaliação e Indicadores na TIC                                                | 3                                             | 
-| Gestão e Governança de TIC, ITIL® Foundation  e CobIT®                                        | 8                                             | 
+| Gestão e Governança de TIC, ITIL® Foundation  e CobIT®                                       | 8                                             | 
 | Auditoria de TIC, com foco em atividades de controle interno, externo e normas de auditoria. | 4                                             | 
 | Análise e melhoria de processos – com foco em modelagem de processos de negócio (BPM).       | 8                                             | 
-| Planejamento de TIC e elaboração de indicadores.                                              | 3                                             | 
+| Planejamento de TIC e elaboração de indicadores                                              | 3                                             | 
 | Gestão de desenvolvimento de sistemas de informação                                          | 3                                             | 
 | Metodologias ágeis de desenvolvimento de sistemas                                            | 3                                             | 
 | Políticas de Segurança da Informação                                                         | 10                                            | 
 | Infraestrutura ágil com práticas DEVOPS usando Docker, Git, Jenkins, Puppet e Ansible        | 7                                             | 
 | PHP Avançado                                                                                 | 4                                             | 
-| Contratação de Soluções de TIC de acordo com a IN SLTI/MP n° 04/2014 e atualizações           | 8                                             | 
+| Contratação de Soluções de TIC de acordo com a IN SLTI/MP n° 04/2014 e atualizações          | 8                                             | 
 | Gestão e fiscalização de contratos administrativos – com ênfase em contratos de TIC          | 8                                             | 
 | Gerência de Projetos                                                                         | 10                                            | 
 | Python Avançado                                                                              | 2                                             | 
@@ -1033,7 +1034,7 @@ Quando for o caso, a CGTIC viabilizará capacitações “In Company”, a fim d
 
 Os recursos a serem investidos na capacitação dos servidores da CGTIC podem ser captados de acordo com a disponibilidade de orçamento prevista no PDTIC e no PCDMinC – 2018.
 
-# 10  PLANO ORÇAMENTÁRIO DO PDTI
+# 10  PLANO ORÇAMENTÁRIO
 
 O orçamento planejado para a CGTIC buscou a alocação de recursos com a produção de benefícios para o MinC. Nessa visão, este orçamento é o produto do processo de planejamento e instrumento de controle, tendo em vista a execução daquilo que se planejou.
 
@@ -1070,7 +1071,7 @@ O plano de gestão de riscos identifica os principais riscos que podem resultar 
 |:--------:|:----------------------------------------------------------------------------------------------------:|:-------------------:|:-------------:|:------------------:|
 |  **R1**  |    Descontinuidade dos negócios pela não manutenção de contratos que suportam atividades críticas    |        Média        |      Alto     |    Contigenciar    |
 |  **R2**  |    Restrições orçamentárias                                                                          |         Alta        |      Alto     |       Aceitar      |
-|  **R3**  |    Evasão de servidores da área de TIC                                                                |         Alta        |     Médio     |    Contigenciar    |
+|  **R3**  |    Evasão de servidores da área de TIC                                                               |         Alta        |     Médio     |    Contigenciar    |
 |  **R4**  |    Insuficiência de recursos humanos para execução das ações planejadas                              |         Alta        |      Alto     |       Mitigar      |
 |  **R5**  |    Falta de patrocínio da Alta Direção                                                               |        Baixa        |      Alto     |       Mitigar      |
 
@@ -1086,7 +1087,7 @@ Nos últimos anos o Governo Federal vem praticando fortes cortes no orçamento f
 
 Como é um fator externo ao MinC, não é possível minimizar sua probabilidade de ocorrência. A mitigação de tal risco se limita a manter uma priorização adequada das ações, que não permite o contigenciamento orçamentário, para que não haja adiamento ou inexecução por parte dos projetos.
 
-### 11.3 **R3** - Evasão de Servidores da Área de TI
+### 11.3 **R3** - Evasão de Servidores da Área de TIC
 
 A área de TIC do MinC conta com apenas 10 servidores do quadro próprio em exercício, não havendo previsão de nenhum novo ingresso. A força de trabalho é composta essencialmente por técnicos contratados e por servidores integrantes do quadro próprio e de carreira de outros órgãos – destacadamente os Analistas em Tecnologia da Informação. O impacto desta evasão é **médio**, pois o quadro de servidores já está abaixo do nível mínimo desejado para a área; no entanto, a probabilidade de ocorrência é **alta** – dado que o histórico destas ocorrências no passado é considerável.
 
@@ -1105,11 +1106,7 @@ Considerando que a alta direção é composta pelas pessoas que possuem o mandat
 1. A discrepância entre os conhecimentos de TIC existentes entre a alta direção e a CGTIC. O que é natural, visto que a especialidade da área de TIC é tecnicamente diferente da especialidade da alta direção. Assim para mitigar este risco, cabem aos gestores de TIC traduzir os custos e benefícios da TIC em termos de custos e benefícios de negócio. O caminho indicado vai depender exclusivamente das características da alta direção da organização combinadas às orientações estratégicas da instituição. 
 1. Outra fonte para o desalinhamento de objetivos é a discrepância entre as agendas. Enquanto a alta direção se orienta para determinadas ações estratégicas as iniciativas de TIC estão propostas com orientações distintas. Este problema pode ser resolvido com o alinhamento das agendas por meio do Comitê de Governança Digital que tem representação da Secretaria Executiva, das Secretarias (gestoras de negócio) e da CGTIC. Esta ação tem como objetivo instituir uma agenda única e, consequentemente, um alinhamento de objetivos da TIC com a alta direção. 
 
-# 12  PROCESSO DE REVISÃO DO PDTIC 
-
-trimestral
-
-# 13  CONCLUSÃO
+# 12  CONCLUSÃO
 O Plano Diretor de Tecnologia da Informação e Comunicação - PDTIC formaliza e comunica à organização os Planos, Metas e Ações em Tecnologia da informação que serão realizados no período de vigência deste instrumento de planejamento, após a realização de diagnóstico que exibe a situação atual e sinaliza a tendência para os investimentos. Além disso, demonstra de modo claro e transparente como os recursos e serviços de TIC serão alocados para atender aos objetivos estratégicos do órgão.
 
 Ressalta-se a importância que a TIC oferece às áreas de negócio do MinC, automatizando tarefas e agregando valor por meio da disponibilização das informações no momento correto, de forma íntegra e segura.
@@ -1118,9 +1115,9 @@ Este instrumento tem por objetivo não apenas transparecer os investimentos em T
 
 Por fim, espera-se com esse planejamento oferecer para os usuários do Ministério da Cultura, assim como para os cidadãos brasileiros beneficiados pelas políticas culturais do Governo Federal, uma experiência inovadora e empolgante, onde a tecnologia possa ajudar a romper barreiras e facilitar a relação do Estado com o cidadão, gerando novas oportunidades de desenvolvimento social, econômico e cultural.
 
-# 15  ANEXOS
+# 13  ANEXOS
 
-## 15.1 Catálogo de Sistemas
+## 13.1 Catálogo de Sistemas
 
 #### Sistemas dos Serviços Digitais Internos ao MinC
 
