Total de projetos
Total de projetos

--- a/PDTIC-2018-2020/PDTIC_2018_2020.md
+++ b/PDTIC-2018-2020/PDTIC_2018_2020.md
@@ -935,7 +935,7 @@ A soma dos valores de cada critério resultará em sua priorização, do maior p
 | PI16 | Treinamento de Formação em Projetos Culturais                                                                                                 | 1 | 0 | 0 | 1 | 2          | 
 | PI17 | Treinamento para o uso na nuvem                                                                                                               | 1 | 0 | 0 | 1 | 2          | 
 
-
+Total de 115 projetos.
 
 # 9  PLANO DE GESTÃO DE PESSOAS DA TIC NO MINC
 
