--- a/PDTIC-2018-2020/PDTIC_2018_2020.md
+++ b/PDTIC-2018-2020/PDTIC_2018_2020.md
@@ -1045,23 +1045,18 @@ Com base nos valores estimados na previsão orçamentária de cada ação, conso
 
 Os valores monetários considerados na orçamentação deste plano diretor baseiam-se em estimativas de mercado e referências de contratações anteriores. Toda contratação de TIC será precedida de minucioso planejamento, realizado em estrita observação às normas legais aplicáveis.
 
---tabela--
+| Plano Interno                                       | 2018               |                    | 2019               |                    | 2020              |                    | 
+|-----------------------------------------------------|--------------------|--------------------|--------------------|--------------------|-------------------|--------------------| 
+|                                                     | Capital            | Custeio            | Capital            | Custeio            | Capital           | Custeio            | 
+| Infraestrutura - Suporte                            |                    |  R$ 9.194.319,61   |                    |  R$ 9.893.393,51   |                   |  R$ 9.893.393,51   | 
+| Infraestrutura - Aquisição                          |  R$ 713.620,00     |                    |  R$ 1.513.620,00   |  R$ 700.000,00     |  R$ 1.513.620,00  |  R$ 700.000,00     | 
+| Outras Ações de Informática                         |  R$ 359.375,19     |                    |  R$ 359.375,19     |  R$ 500.000,00     |  R$ 359.375,19    |  R$ 500.000,00     | 
+| Telefonia e Comunicação                             |                    |  R$ 2.617.818,53   |                    |  R$ 2.675.922,49   |                   |  R$ 2.675.922,49   | 
+| Desenvolvimento de Sistemas e Aquisição de Software |  R$ 500.000,00     |  R$ 3.815.086,00   |  R$ 1.000.000,00   |  R$ 3.431.995,00   |  R$ 1.000.000,00  |  R$ 3.431.995,00   | 
+| TOTAL                                               |  R$ 1.572.995,19   |  R$ 15.627.224,14  |  R$ 2.872.995,19   |  R$ 17.201.311,00  |  R$ 2.872.995,19  |  R$ 17.201.311,00  | 
+| Anual Consolidado                                   |  R$ 17.200.219,33  |                    |  R$ 20.074.306,19  |                    |  R$ 20.074.306,19 |                    | 
 
-Nesta Proposta Orçamentária não há previsão para realização de adequações ou restrições na composição orçamentária deste PDTIC. 
-
-
-## 10.1 Planos Internos
-
-Os Planos Internos utilizados para controle de saldo de valores são instrumentos úteis ao planejamento da execução financeira desta CGTIC. O alinhamento das ações com seu respectivo PI traz um melhor controle sobre a execução financeira. 
-
-Além disto, o programa de Pactuação de Desempenho prevê que todos os recursos orçamentários sejam detalhados na forma de PIs. Este programa é descrito na Portaria nº 149, de 21 de novembro de 2012 que institui o Programa de Pactuação de Desempenho no âmbito do Ministério da Cultura. Uma das diretrizes deste programa é, conforme Art. 2º item II da referida portaria, a adoção de procedimentos, métodos e modelos uniformes para todas as unidades, respeitadas as suas especificidades.
-
-Abaixo, é apresentada uma tabela mostrando um consolidado de Planos Internos.
-
---tabela
-
-Cabe lembrar que este consolidado de PIs é baseado na Previsão Orçamentária, e, portanto, deve sofrer alterações ao longo da vigência deste PDTI. Também é utilizado uma abreviação para representar o PI pois o código identificador do mesmo pode ser alterado a cada ano.
-
+Nesta Proposta Orçamentária não há previsão para realização de adequações ou restrições na composição orçamentária deste PDTIC, ou seja, poderá sofrer alterações ao longo da vigência deste PDTIC.
 
 # 11  PLANO DE GESTÃO DE RISCOS
 
