--- a/PDTIC-2018-2020/PDTIC_2018_2020.md
+++ b/PDTIC-2018-2020/PDTIC_2018_2020.md
@@ -1045,9 +1045,9 @@ Com base nos valores estimados na previsão orçamentária de cada ação, conso
 
 Os valores monetários considerados na orçamentação deste plano diretor baseiam-se em estimativas de mercado e referências de contratações anteriores. Toda contratação de TIC será precedida de minucioso planejamento, realizado em estrita observação às normas legais aplicáveis.
 
-| Plano Interno                                       | 2018               |                    | 2019               |                    | 2020              |                    | 
-|-----------------------------------------------------|--------------------|--------------------|--------------------|--------------------|-------------------|--------------------| 
-|                                                     | Capital            | Custeio            | Capital            | Custeio            | Capital           | Custeio            | 
+| Plano Interno                                       | 2018               | 2018               | 2019               | 2019               | 2020              | 2020               |
+|                                                     | **Capital**        | **Custeio**        | **Capital**        | **Custeio**        | **Capital**       | **Custeio**        |
+|-----------------------------------------------------|--------------------|--------------------|--------------------|--------------------|-------------------|--------------------|
 | Infraestrutura - Suporte                            |                    |  R$ 9.194.319,61   |                    |  R$ 9.893.393,51   |                   |  R$ 9.893.393,51   | 
 | Infraestrutura - Aquisição                          |  R$ 713.620,00     |                    |  R$ 1.513.620,00   |  R$ 700.000,00     |  R$ 1.513.620,00  |  R$ 700.000,00     | 
 | Outras Ações de Informática                         |  R$ 359.375,19     |                    |  R$ 359.375,19     |  R$ 500.000,00     |  R$ 359.375,19    |  R$ 500.000,00     | 
@@ -1055,6 +1055,9 @@ Os valores monetários considerados na orçamentação deste plano diretor basei
 | Desenvolvimento de Sistemas e Aquisição de Software |  R$ 500.000,00     |  R$ 3.815.086,00   |  R$ 1.000.000,00   |  R$ 3.431.995,00   |  R$ 1.000.000,00  |  R$ 3.431.995,00   | 
 | TOTAL                                               |  R$ 1.572.995,19   |  R$ 15.627.224,14  |  R$ 2.872.995,19   |  R$ 17.201.311,00  |  R$ 2.872.995,19  |  R$ 17.201.311,00  | 
 | Anual Consolidado                                   |  R$ 17.200.219,33  |                    |  R$ 20.074.306,19  |                    |  R$ 20.074.306,19 |                    | 
+
+
+
 
 Nesta Proposta Orçamentária não há previsão para realização de adequações ou restrições na composição orçamentária deste PDTIC, ou seja, poderá sofrer alterações ao longo da vigência deste PDTIC.
 
