--- a/PDTIC-2018-2020/PDTIC_2018_2020.md
+++ b/PDTIC-2018-2020/PDTIC_2018_2020.md
@@ -54,7 +54,7 @@ Marcus Vinícius Pereira de Menezes
 Munique Braz Coutinho  
 Jonas Jeske  
 Sebastião Lima Filho  
-Wuarli Ceza Santos
+Wuarli Ceza Nunes dos Santos
 
 ## Apresentação
 O presente Plano Diretor tem por objetivo manter o alinhamento entre a unidade de TIC do Ministério da Cultura e suas áreas de negócio, buscando assim proporcionar maior eficiência para a utilização dos recursos de TIC, no alcance dos objetivos estratégicos deste Ministério.
