--- a/PDTIC-2018-2020/PDTIC_2018_2020.md
+++ b/PDTIC-2018-2020/PDTIC_2018_2020.md
@@ -1053,8 +1053,8 @@ Os valores monetários considerados na orçamentação deste plano diretor basei
 | Outras Ações de Informática                         |  R$ 500.000,00     |  R$ -             |  R$ 500.000,00     |  R$ 359.375,19    |  R$ 525.000,00     |  R$ 377.343,95    | 
 | Telefonia e Comunicação                             |  R$ 1.426.880,00   |  R$ -             |  R$ 2.675.922,49   |  R$ -             |  R$ 2.809.718,61   |  R$ -             | 
 | Desenvolvimento de Sistemas e Aquisição de Software |  R$ 3.529.212,00   |  R$ 100.000,00    |  R$ 3.431.995,00   |  R$ 1.000.000,00  |  R$ 3.603.594,75   |  R$ 1.050.000,00  | 
-| **TOTAL**                                           |  R$ 14.229.212,00  |  R$ 1.100.000,00  |  R$ 17.201.311,00  |  R$ 2.872.995,19  |  R$ 18.061.376,55  |  R$ 3.016.644,95  | 
-| **Anual Consolidado**                               |  R$ 15.329.212,00  |                   |  R$ 20.074.306,19  |                   |  R$ 21.078.021,50  |                   | 
+| **TOTAL**                                           |  **R$ 14.229.212,00**  |  **R$ 1.100.000,00**  |  **R$ 17.201.311,00**  |  **R$ 2.872.995,19**  |  **R$ 18.061.376,55**  |  **R$ 3.016.644,95**  | 
+| **Anual Consolidado**                               |  **R$ 15.329.212,00**  |                   |  **R$ 20.074.306,19**  |                   |  **R$ 21.078.021,50**  |                   | 
 
 
 Nesta Proposta Orçamentária não há previsão para realização de adequações ou restrições na composição orçamentária deste PDTIC, ou seja, poderá sofrer alterações ao longo da vigência deste PDTIC.
